# DHU-Kernel-Density-Estimation-KDE

./: CMakeLists.txt  README.md  kde_last.cpp  kde_v1.0.cpp  kde_v1.1.cpp  kde_v2.0.cpp  kde_v2.1.cpp  kde_v2.2.cpp  kde_v2.3.cpp  kde_v2.4.cpp  kde_v2.5.cpp  kde_v2.6.cpp  kde_v2.7.cpp  kde_v2.8.cpp  kde_v2.9.cpp
result/: KDE.m
result/0273/: epanechnikov_15.004149.txt  epanechnikov_19.572385.txt  epanechnikov_40.000000.txt  gaussian_15.004149.txt  gaussian_19.572385.txt  gaussian_40.000000.txt
result/0825/: epanechnikov_15.004149.txt  epanechnikov_19.572385.txt  gaussian_15.004149.txt  gaussian_19.572385.txt
result/1690/: epanechnikov_15.004149.txt  epanechnikov_19.572385.txt  gaussian_15.004149.txt  gaussian_19.572385.txt
